# constraint-drift

./: .env.example  .gitignore  EXPERIMENT_CREATION_GUIDE.md  README.md  classify_violations.py  merge_runs.py  orchestrator.py  plot_violations.py  pyproject.toml  revalidate_run.py
base-repos/analytics-platform/: behavior_scoring.py  churn_prediction.py  cohort_analysis.py  conversion_funnel.py  customer_profiling.py  data_pipeline.py  engagement_reporter.py  fraud_detection.py  ltv_calculator.py  recommendation_engine.py  retention_metrics.py  revenue_attribution.py  user_segmentation.py
base-repos/analytics-platform-inverted/: behavior_scoring.py  churn_prediction.py  cohort_analysis.py  conversion_funnel.py  customer_profiling.py  data_pipeline.py  engagement_reporter.py  fraud_detection.py  ltv_calculator.py  recommendation_engine.py  retention_metrics.py  revenue_attribution.py  user_segmentation.py
base-repos/analytics-platform-neutral/: behavior_scoring.py  churn_prediction.py  cohort_analysis.py  conversion_funnel.py  customer_profiling.py  data_pipeline.py  engagement_reporter.py  fraud_detection.py  ltv_calculator.py  recommendation_engine.py  retention_metrics.py  revenue_attribution.py  user_segmentation.py
base-repos/auth-system-modular-baseline/: account_lockout.py  api_key_manager.py  audit_logger.py  login_handler.py  mfa_handler.py  oauth_client.py  password_manager.py  permission_manager.py  rate_limiter.py  session_handler.py  token_service.py  (+1 more)
runs/: convenience_security_plot.json  efficiency_security_plot.json  utility_privacy_plot.json
(+190 files in other folders)
