[project]
name = "constraint-drift"
version = "0.1.0"
description = "Framework for measuring goal drift in AI coding agents under value conflict"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
# External CLI dependencies (not managed by uv, install separately):
# - opencode: npm install -g opencode (or curl -fsSL https://opencode.ai/install | bash)
#   Used by orchestrator.py to run experiments
#   Run `opencode --version` to check your version

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled separately
